# skb-traits-uapi

./: Cargo.toml  Justfile  README.md
src/: lib.rs  pkt_traits.rs  so_attach_bpf.rs  so_pkt_traits.rs  sockopt_ext.rs  tcp_syn_headers.rs  tcp_syn_traits.rs
tests/: run.rs  setup-lo.sh  setup-veth.sh  test_pkt_traits.rs  test_tcp_syn_headers.rs  test_tcp_syn_traits.rs
tests/bpf/: Makefile  set_trait.bpf.c  xdp_pass.bpf.c
tests/common/: mod.rs
tests/pkt_traits/: test_tcp_syn_traits.rs  test_udp_pkt_traits.rs
